<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedMon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="medMon">Medical Monitor</string>
    <string name="medicationMssg2User">Time To Take Medication : </string>
    <string name="medicationCounter">00:00:00</string>
    <string name="button1">Medicine Set-Up</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="medicineSetUp">Medical Interface</string>
    <string name="prescribedTimeMssg">Prescribed Time:</string>
    <string name="button2">Save</string>
    <string name="title_activity_vibrate">Vibrate</string>
    <string name="local_service_started">svc (on)</string>
    <string name="title_activity_static_viewer">Static Viewer</string>
    <string name="onceADay">Once A Day</string>
    <string name="twiceADay">Twice A Day</string>
    <string name="threeTimesADay">Three Times A Day</string>
    <string name="fourTimesADay">Four Times A Day</string>
    <string name="fiveTimesADay">Five Times A Day</string>
    <string name="sixTimesADay">Six Times A Day</string>
    <string name="title_activity_init_viewer">InitViewer</string>
    <string name="title_activity_doctor_pane">Doctor Panel</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_doctor_panel">Doctor Panel</string>
    <string name="title_activity_doctor_slide">Doctor</string>
    <string name="doctor_panel">Doctor\'s Panel</string>
    <string name="title_activity_panel">Panel</string>
    <string name="title_activity_drawer_test">Drawer Test</string>

    <string-array name="planets_array">
        <item>Doctor\'s Panel</item>
        <item>Panel</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="app_not_available">An Error Occurred</string>
    <string name="title_activity_patient_panel">Patient Panel</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_mdmlist_draw">MDMListDraw</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
